pods.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodeapp
  labels:
    app: nodeapp
spec:
  containers:
    - name: nodeapp
      image: deadloop/nodeapp:tagVersion
      ports:
        - containerPort: 8080
