services.yml
kind: Service
apiVersion: v1
metadata:
  name: nodeapp
spec:
  selector:
    app: nodeapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  # type: LoadBalancer (if its a cloud provider like AWS, GCP, DigitalOcean)
  type: ClusterIP
